[package]
name = "chase"
version = "0.1.1"
authors = ["lloydmeta <lloydmeta@gmail.com>"]
license = "MIT"
description = """
Async + sync file-tailing for people who care about line numbers.
"""
documentation = "https://docs.rs/chase"
repository = "https://github.com/lloydmeta/chase-rs"
keywords = ["chase", "logs", "tail", "log-tailing", "file-watch"]
readme = "README.md"

[[bin]]
name = "chase"
path = "src/main.rs"
required-features = ["binary"]

[dependencies]
futures = { version = "0.1", optional = true }
clap = { version = "2.30", optional = true }
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }

[features]
binary = ["clap"]
stream = ["futures"]
with-serde = ["serde", "serde_derive"]
